# videotoframes

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: block-destructive-git.sh  session-start.sh  task-completed.sh
.codex/: AGENTS.md
.github/workflows/: ci.yml
agents/: config.json
docs/plans/: 2026-04-16-001-feat-videotoframes-plan.md
docs/solutions/: INDEX.md
docs/solutions/pipeline-tuning/: dhash-collapses-solid-color-frames.md
src/videotoframes/: __init__.py  _version.py  cli.py
src/videotoframes/commands/: extract.py  manifest.py
src/videotoframes/io/: atomic.py  subproc.py
src/videotoframes/pipeline/: curate.py  detect.py  fps_normalize.py  manifest.py  preflight.py
tests/: conftest.py
tests/integration/: test_synthetic_extract.py
tests/unit/: test_atomic.py  test_cli.py  test_curate.py  test_manifest.py  test_preflight.py
tests/validation/find_the_dog/: conftest.py  test_coverage.py
tests/validation/find_the_dog/_reports/: coverage.json
